<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent">
            <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:id="@+id/player1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"
                        android:checked="true"/>

                <RadioButton
                        android:id="@+id/player2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two"/>
                <RadioButton
                        android:id="@+id/player3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three"/>
                <RadioButton
                        android:id="@+id/player4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four"/>

                <RadioButton
                        android:id="@+id/player5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five"/>
                <RadioButton
                        android:id="@+id/player6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seven"/>
                <RadioButton
                        android:id="@+id/player7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seven"/>
                <RadioButton
                        android:id="@+id/player8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eight"/>
                <RadioButton
                        android:id="@+id/player9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nine"/>
                <RadioButton
                        android:id="@+id/player10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ten"/>
                <RadioButton
                        android:id="@+id/player11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eleven"/>
                <RadioButton
                        android:id="@+id/player12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twelve"/>
                <RadioButton
                        android:id="@+id/player13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thirteen"/>
                <RadioButton
                        android:id="@+id/player14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fourteen"/>
                <RadioButton
                        android:id="@+id/player15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fifteen"/>
                <RadioButton
                        android:id="@+id/player16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sixteen"/>
                <RadioButton
                        android:id="@+id/player17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seventeen"/>
                <RadioButton
                        android:id="@+id/player18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eighteen"/>
                <RadioButton
                        android:id="@+id/player19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nineteen"/>
                <RadioButton
                        android:id="@+id/player20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twenty"/>

            </RadioGroup>

        </LinearLayout>
    </ScrollView>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/select"
            android:layout_alignParentBottom="true"/>

</LinearLayout>