<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:screenOrientation="portrait">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/player2Set"
                    android:layout_alignLeft="@+id/player1Set" android:layout_above="@+id/player1Set">
        <com.isotope.Button_Wars.UpsideDownText
                android:layout_height="wrap_content"
                android:id="@+id/congratsa"
                android:text="@string/congrats"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"></com.isotope.Button_Wars.UpsideDownText>
        <com.isotope.Button_Wars.UpsideDownText
                android:layout_height="wrap_content"
                android:id="@+id/yourea"
                android:text="@string/youre"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/congratsa"></com.isotope.Button_Wars.UpsideDownText>
        <com.isotope.Button_Wars.UpsideDownText
                android:layout_height="wrap_content"
                android:id="@+id/donea"
                android:text="@string/done"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/yourea"></com.isotope.Button_Wars.UpsideDownText>
        <com.isotope.Button_Wars.RotateButton
                android:layout_height="wrap_content"
                android:id="@+id/mainma"
                android:text="@string/mainm"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/donea"></com.isotope.Button_Wars.RotateButton>
        <com.isotope.Button_Wars.RotateButton
                android:layout_height="wrap_content"
                android:id="@+id/rematchab"
                android:text="@string/rematch"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/mainma"></com.isotope.Button_Wars.RotateButton>
    </RelativeLayout>
    <RelativeLayout
            xmlns:andorid="http://schemas.android.com/apk/res/android"
            andorid:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player1Set"
            android:layout_alignParentBottom="true"
            andorid:layout_marginBottom="60dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/congrats"
                android:id="@+id/congrats"
                android:layout_centerVertical="true"
                andorid:layout_centerHorizontal="true"
                andorid:layout_alignParentTop="true"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/youre"
                android:id="@+id/youre"
                andorid:layout_centerHorizontal="true"
                andorid:layout_below="@id/congrats"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/done"
                android:id="@+id/done"
                andorid:layout_centerHorizontal="true"
                andorid:layout_below="@id/youre"/>
        <Button
                andorid:layout_width="wrap_content"
                andorid:layout_height="wrap_content"
                andorid:text="@string/mainm"
                andorid:id="@+id/restart"
                andorid:layout_centerHorizontal="true"
                andorid:layout_below="@+id/done"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <Button
                andorid:layout_width="wrap_content"
                andorid:layout_height="wrap_content"
                andorid:text="@string/rematch"
                andorid:id="@+id/rematchb"
                andorid:layout_centerHorizontal="true"
                andorid:layout_below="@+id/restart"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
    </RelativeLayout>
</RelativeLayout>